--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,258 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient( #de6161, #2657eb);
+  background-attachment: fixed;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+font-family: 'Josefin Sans', sans-serif;
+}
+
+.app_container {
+  padding-top:50px;
+}
+
+.col-3 {
+  flex: 0 0 auto;
+  width: auto;
+}
+
+.app_row{
+  height: 90vh;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+/*.sidebar__email{
+    width: 230px;
+    margin-bottom: 15px;
+    padding-left: 2px;
+    padding-right: 6px;
+    border-bottom-width: 6px;
+
+} */
+
+.app__main-div {
+  padding: 25px 15px;
+  background-color: cornsilk;
+  border-radius: 20px;
+  border:1px solid black;
+  box-shadow: 0 0 10px black;
+}
+
+.app_sidebar{
+  
+  height: 100%;
+  background-color: cornsilk;
+  padding: 25px 15px;
+  border:1px solid black;
+  border-radius: 20px;
+  box-shadow: 0 0 10px black;
+  text-align: center;
+  font-family: cursive;
+  font-size: small;
+
+}
+
+.sidebar_my_image{
+  height:110px;
+  width:120px;
+  object-fit:contain;
+  border-radius: 30px;
+}
+
+.sidebar_social{
+  width: 25px;
+  height: 25px;
+}
+
+.sidebar_name{
+  margin: 20px 0;
+}
+
+.sidebar_item{
+  margin-bottom: 20px;
+  padding-top: 6px;
+  height:40px;
+  font-size: 1.05rem;
+}
+
+.sidebar_title{
+  border-radius: 30px;
+}
+
+.sidebar_social_icons{
+  margin-top: 30px;
+  margin-right: 3px;
+  padding-top: 6px;
+}
+
+.sidebar_email{
+  background-image: linear-gradient( #de6161, #2657eb);
+  
+  border-radius: 30px;
+  margin:35px 25px;
+  cursor: pointer;
+  transition: all 3s linear ;
+}
+
+.sidebar_contact{
+  padding:2px 0;
+  margin:20px -15px;
+}
+
+.sidebar_location{
+  margin-bottom: 20px;
+  margin-right: 3px;
+  height: 56px;
+}
+
+@media(max-width:991px){
+
+  .main-div{
+    margin:30px 0;
+  }
+
+  .app_sidebar{
+    padding: 30px 25px;
+    width:152px;
+  }
+}
+
+/*Navbar*/
+
+.navbar__items{
+  display: flex;
+}
+
+.navbar__active{
+  font-size: 2rem;
+  font-weight: 700;
+  color:black;
+  border-bottom: 4px solid #de6161;
+}
+
+.navbar__item{
+  margin-right: 20px;
+  text-decoration: none;
+  color: black;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.navbar__item:hover{
+  background: -webkit-linear-gradient( #de6161, #2657eb);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/*about*/
+.about{
+  padding:20px;
+  margin:0 -35px;
+}
+
+.about__intro{
+  font-size: 1.1rem;
+  padding:20px;
+}
+
+.about__container{
+  background-color: lightgrey;
+  padding: 20px;
+}
+
+.about__heading{
+  font-size: 25px;
+  font-weight: 700;
+  color: black;
+}
+
+/*skillcard*/
+
+.skill-card{
+  background-color: whitesmoke;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 10px;
+}
+
+.skill-card__icon{
+  width:40px;
+  height: 40px;
+}
+
+.skill-card-cody{
+  margin-left: 15px;
+}
+
+.skill-card__content{
+  margin: 0;
+  font-size: 0.9rem;
+  color: darkgreen;
+
+
+}
+
+/*Resume*/
+
+.resume{
+  padding-top:20px;
+}
+
+.resume-card__heading, .resume-language__heading{
+  margin-left: 10px;
+  font-size: 1.8rem;
+  font-weight: 700;
+  color:black;
+}
+
+.resume-card__body{
+  margin-top: 10px;
+}
+
+.resume-card__title{
+  font-weight: 700;
+}
+
+.resume-card__name{
+  font-size: 15px;
+}
+
+.resume-card__details{
+  font-size: 0.9rem;
+  padding-top: 20px;
+}
+
+/*Bar*/
+
+.bar{
+  width:90%;
+  background-image: linear-gradient( #de6161, #2657eb);
+
+  border-radius: 20px;
+  margin-bottom: 12px;
+}
+
+.bar__icon{
+  width:20px;
+  height:15px;
+  margin-right: 5px;
+}
+
+.bar__wrapper{
+  background-color: rgb(45, 130, 45);
+
+  border-radius: 20px;
+  padding: 4px 14px;
+  color: white;
+  font-size: 0.9rem;
+  
 }
